--- a/styleit.css
+++ b/styleit.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(deaf_studies.jpg);
+  background-image: url(img/deaf_studies.jpg);
   background-repeat: no-repeat;
   background-size: 170%;
   margin: 0;
